--- a/OOPS_Python/OOPS_Python.ipynb
+++ b/OOPS_Python/OOPS_Python.ipynb
@@ -289,6 +289,18 @@
     "    #Instance Attributes\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    \n",
+    "    # Class Attribute\n",
+    "    species = 'mammal'"
+   ]
   }
  ],
  "metadata": {
