--- a/Gensim/Gensim_Tutorial.ipynb
+++ b/Gensim/Gensim_Tutorial.ipynb
@@ -1462,6 +1462,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiments on the English Wikipedia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparing the corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. First, download the dump of all Wikipedia articles from http://download.wikimedia.org/enwiki/. This file is about 8GB in size and contains all articles from English Wikipedia.\n",
+    "\n",
+    "2. Convert the articles to plain text(process Wiki markup) and store the result as sparse TF-IDF vectors. In Python, this is easy to do on-the-fly and we don't even need to uncompress the whole archive to disk."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Latent Semantic Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2019-10-23 02:08:54,221 : WARNING : Text does not contain num_docs on the first line.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "import gensim\n",
+    "\n",
+    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level= logging.INFO)\n",
+    "\n",
+    "# load id -> word mapping (the dictionary), one of the results of step 2 above\n",
+    "id2word = gensim.corpora.Dictionary.load_from_text('wiki_en_wordids.txt')\n",
+    "\n",
+    "# load corpus iterator\n",
+    "#mm = gensim.corpora.MmCorpus('wiki_en_tfidf.mm')\n",
+    "#print(mm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1485,7 +1549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
